trunk/Archive2/57/128b07c505bd43/output
main.cpp:14:7: error: no matching constructor for initialization of 'B'
    B b (a);
      ^  ~
main.cpp:6:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'A' to 'const B' for 1st argument
struct B : A
       ^
main.cpp:6:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'A' to 'B' for 1st argument
struct B : A
       ^
main.cpp:6:8: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 1 was provided
1 error generated.
